# E4VM

./: .editorconfig  .gitignore  3eamc.sh  CMakeLists.txt  CNAME  LICENSE  Makefile  PVS-Studio.cmake  Platform-i386-pc386.cmake  README.rst  gcompile.erl
3eamc/: Makefile  README.rst  e4c.sh  erlangvm.e4
3eamc/priv/: gb_trees.core  test1.kernel
3eamc/src/: 3eamc.app.src  3eamc.erl  3eamc.hrl  3eamc_asm.erl  3eamc_asmbin.erl  3eamc_compiler.erl  3eamc_core_match.erl  3eamc_encode.erl  3eamc_forth.erl  3eamc_match.erl  3eamc_pass_asm_bin.erl  3eamc_pass_beam_asm.erl  3eamc_pass_beam_forth.erl  3eamc_pass_core_forth.erl  3eamc_pass_forth_bin.erl  3eamc_state.erl  3eamc_sup.erl  e4.app.src  e4.erl  e4.hrl  e4_compiler.erl  (+3 more)
Compiler/: .gitignore  Makefile  README.rst  elvis.config  stack.yaml  uerlc.cabal
Compiler.old/: Makefile  rebar.config  uerlc.sh
Compiler/app/: Main.hs
Compiler/apps/e4assembler/: README.md
Compiler/apps/e4assembler/include/: e4asm.hrl  j1.hrl
Compiler/apps/e4assembler/src/: e4asm.app.src  e4asm_bc.erl  e4asm_bytecode.erl  e4asm_compile.erl  e4asm_compile_bin.erl  e4asm_cte.erl  e4asm_dis.erl  e4asm_encode_cte.erl  e4asm_encode_int.erl  e4asm_file.erl  e4asm_helper.erl  e4asm_huffman.erl  e4asm_optimize.erl  e4asm_parse.erl  e4asm_pass_asm.erl  e4asm_pass_link.erl  e4asm_pp.erl  e4asm_prog.erl  e4asm_simple_encoding.erl  e4asm_stats.erl  e4asm_term.erl  e4asm_util.erl
Compiler/apps/e4c/: LICENSE
Compiler/apps/e4c/include/: e4c.hrl  forth.hrl  kernel_erl.hrl
Compiler/apps/e4c/src/: e4_pass_flatten.erl  e4_pass_opt1.erl  e4c.erl  e4c_compile.erl  e4c_print.erl
Compiler/apps/e4compiler/: README.md
Compiler/apps/e4compiler/include/: e4c.hrl  forth.hrl
Compiler/apps/e4compiler/src/: e4c.erl  e4c_compile.erl  e4c_pass_S.erl  e4c_print.erl
Compiler/apps/j1c/src/: j1c_bc.erl  j1c_compile.erl  j1c_compile_bin.erl  j1c_disasm.erl  j1c_file.erl  j1c_parse.erl  j1c_pass_forth.erl  j1c_pass_link.erl
Compiler/apps/uasm/include/: uasm.hrl
Compiler/apps/uasm/src/: uasm_bytecode.erl  uasm_encode_cte.erl  uasm_encode_int.erl  uasm_file.erl  uasm_huffman.erl  uasm_pass_asm.erl
Compiler/apps/uerlc/include/: uerlc.hrl
Compiler/apps/uerlc/src/: uerlc.app.src  uerlc_pass_from_S.erl
Compiler/classes/test/Compiler/: e4c.app
Compiler/forth-lib/: e4core.e4
Compiler/priv/: .gitignore  gb_trees.core.ast  gb_trees.kernel  test1.dis
Compiler/src/: Bitcode.hs  Bits.hs  Bytecode.hs  Uerlc.hs
Compiler/src/Asm/: Locations.hs  Mod.hs
Compiler/src/Bitcode/: Encode.hs  Func.hs  Mod.hs  Op.hs  UerlFile.hs
Compiler/src/Bitcode/Encode/: Const.hs  Huffman.hs
Compiler/src/Bytecode/: Encode.hs  Mod.hs  Op.hs
Compiler/src/Bytecode/Encode/: Huffman.hs
Compiler/src/Pass/: PassAsm.hs  PassBeamS.hs  PassBitcode.hs
Compiler/test/: core_forth_SUITE.erl
Compiler/testData/: test1.erl
GhcCompiler/: .gitignore  .stylish-haskell.yaml  LICENSE  Makefile  README.rst  stack.yaml  uerlc.cabal
GhcCompiler/app/: Main.hs
GhcCompiler/src/: Asm.hs  AsmFunc.hs  AsmMod.hs  BeamSParser.hs  BeamSTypes.hs  Bits.hs  Bytecode.hs  BytecodeFunc.hs  BytecodeMod.hs  BytecodeOp.hs  MicroAsm.hs  PassFromS.hs  Term.hs  TransformAsm.hs  TransformS.hs  UAssembly.hs  UFunction.hs  UModule.hs  Uerlc.hs  tokenizer.hs  uerlc.hs
GhcCompiler/src/Asm/: Binary.hs  Func.hs  Instruction.hs  Mod.hs
GhcCompiler/src/Bytecode/: Bits.hs  Encode.hs  Func.hs  Mod.hs  Op.hs
GhcCompiler/src/Bytecode/Encode/: Const.hs  Huffman.hs
GhcCompiler/src/Pass/: PAsm.hs  PBeamS.hs  PassAsm.hs  PassBeamS.hs
Runtime/: .clang-format  .gitignore  CMakeLists.txt  Makefile  license.snippet
Runtime/doc/: 3eam-format.rst
Runtime/include/: e4.h
Runtime/include/e4platf/: byte_stream_reader.h  conf.h  debug.h  fs.h  mem.h  messages.h  types.h
Runtime/include/e4rt/: atom_store.h  binary.h  box.h  bytecode.h  code_mgr.h  dist.h  ext_term_format.h  heap.h  messages.h  module.h  process.h  range_checker.h  scheduler.h  term.h  term_as_map_key.h  term_tag.h  vm.h
Runtime/include/e4std/: array.h  complicated.h  free_fun.h  map.h  ptr.h  sizes.h  string.h  stuff.h  vector.h  vector_impl.h  view.h
Runtime/src/: main.cpp
Runtime/src/e4platf/: byte_stream_reader.cpp  debug.cpp  fs.cpp  mem.cpp
Runtime/src/e4rt/: atom_store.cpp  binary.cpp  bytecode.cpp  code_mgr.cpp  ext_term_format.cpp  module.cpp  process.cpp  scheduler.cpp  term.cpp  vm.cpp  vm_loop.cpp
Runtime/src/e4std/: free_fun.cpp  stuff.cpp  vector.cpp
compiler/: .clang-format  CMakeLists.txt  Makefile  format.sh
compiler/antlr4-erlang/: Erlang.g4  Makefile
compiler/antlr4-runtime/: CMakeLists.txt
compiler/bison/: erlang.ll  erlang.yy
compiler/priv/: gb_trees.P  test1.P  test1.erl
compiler/src/: .gitignore  ast.cpp  ast.h  ast_builder.cpp  ast_builder.h  codegen.cpp  codegen.h  compile_error.h  compiler.cpp  compiler.h  erl_codegen.cpp  erl_codegen.h  erl_lexer.cpp  erl_lexer.h  erl_parse.cpp  erl_parse.h  erl_scanner.cpp  erl_scanner.h  erl_yy_driver.cpp  erl_yy_driver.h  main.cpp  naming.cpp  naming.h
compiler/src/antlr4/: .gitignore  Erlang.tokens  ErlangBaseListener.cpp  ErlangBaseListener.h  ErlangBaseVisitor.cpp  ErlangBaseVisitor.h  ErlangLexer.cpp  ErlangLexer.h  ErlangListener.cpp  ErlangListener.h  ErlangParser.cpp  ErlangParser.h  ErlangVisitor.cpp  ErlangVisitor.h
compiler/src/llvmexamp/: erl_ast.h  erl_codegen.cpp  erl_jit.h  erl_scanner.h
doc/: 3eam-format.rst
docs/: .buildinfo  CNAME  README.md  compact-encoding.html  contributing.html  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js
docs-src/: Makefile  compact-encoding.rst  conf.py  index.md  index.rst  make.bat
e4compile/: .gitignore  Makefile  README.rst  e4c.sh  gluon-core.fs  rebar.config
include/: e4.h  gluon.h
llvm-kernel/: .gitignore  Makefile  README.rst  kerlc.ml  lexer.ml  parser.ml  toplevel.ml
qemu-disk/: .gitignore  make-image.sh
src/: code_mgr.cpp  debug.cpp  interned_string.cpp  main.cpp  mem.cpp  module.cpp  rtems-main.c  rtems-main.c.cl.cfg  rtems-main.cpp  vm.cpp
test/: test1.erl
(+192 files in other folders)
