name:                uerlc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://uerlang.org
license:             BSD3
license-file:        LICENSE
author:              Dmytro Lytovchenko
maintainer:          dmytro.lytovchenko@gmail.com
copyright:           2017 Dmytro Lytovchenko
category:            VM
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:    Asm
                    , Asm.Binary
                    , Asm.Func
                    , Asm.Instruction
                    , Asm.Locations
                    , Asm.Mod
                    , BeamSParser
                    , Bits
                    , Bitcode
                    , Bitcode.Encode
                    , Bitcode.Encode.Const
                    , Bitcode.Encode.Huffman
                    , Bitcode.Func
                    , Bitcode.Mod
                    , Bitcode.Op
                    , Term
                    , Pass.PassAsm
                    , Pass.PassBeamS
                    , Pass.PassBitcode
                    , Uerlc
  build-depends:      base >= 4.7 && < 5
                    , ansi-terminal
                    , binary
                    , binary-strict
                    , bytestring
                    , containers
                    , exceptions
                    , mtl
                    , parsec
  default-language:    Haskell2010

executable uerlc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base
                    , ansi-terminal
                    , bytestring
                    , exceptions
                    , hslogger
                    , uerlc
  default-language:    Haskell2010

test-suite uerlc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , uerlc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kvakvs/E4VM
